src/App.css
.alert {
  position: fixed;
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  z-index: 9999;
  color: #fff;
  font-size: 1.8rem;
  font-weight: 400;
  text-align: center;
  border-bottom-left-radius: 5rem;
  border-bottom-right-radius: 5rem;
  padding: 1.6rem 15rem;
  -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.25);
  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.25);
}
.alert--success {
  background-color: #20bf6b;
}
.alert--error {
  background-color: #fc0000;
}

/* Position and sizing of burger button */
.bm-burger-button {
  position: fixed;
  width: 5vmin;
  height: 3vmin;
  left: 5vmin;
  top: 5vmin;
}

/* Color/shape of burger icon bars */
.bm-burger-bars {
  background: #b5a0a0;
}

/* Color/shape of burger icon bars on hover*/
.bm-burger-bars-hover {
  background: #a90000;
}

/* Position and sizing of clickable cross button */
.bm-cross-button {
  height: 24rem;
  width: 24rem;
}

/* Color/shape of close button cross */
.bm-cross {
  background: #bdc3c7;
}

/*
Sidebar wrapper styles
Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
*/
.bm-menu-wrap {
  position: fixed;
  height: 100%;
}

/* General sidebar styles */
.bm-menu {
  background: #46c0edaa;
  padding: 2.5em 1.5em 0;
  font-size: 2.15em;
}

/* Morph shape necessary with bubble or elastic */
.bm-morph-shape {
  fill: #373a47;
}

/* Wrapper for item list */
.bm-item-list {
  color: #500c0c;
  padding: 0.8em;
}

/* Individual item */
.bm-item {
  display: inline-block;
}

/* Styling of overlay */
.bm-overlay {
  background: rgba(255, 255, 255, 0.971);
}

/* Individual item */
.bm-item {
  display: inline-block;

  color: #400c0c;
  margin-bottom: 10rem;
  text-align: left;
  text-decoration: none;
  transition: color 0.2s;
}

.bm-item:hover {
  color: #ffffff;
}

/*ADMIN FORM*/
.formdiv {
  height: 150vh;
  width: 100%;
  overflow-y: scroll;

  font-size: 15px;
  background: rgb(254, 251, 251);
  background: linear-gradient(
    18deg,
    rgba(254, 251, 251, 1) 0%,
    rgba(223, 190, 137, 1) 58%
  );
  position: relative;
}
.formdiv form {
  /*  */
  padding: 20px 40px;
  padding-top: 50px;
  /* position realtive in container */
  position: absolute;
  left: 50%;
  top: 50%;
  background-color: white;
  transform: translate(-50%, -50%);
  border-radius: 10px;
  box-shadow: 0px 0px 12px 4px rgba(145, 94, 38, 0.75);
  -webkit-box-shadow: 0px 0px 12px 4px rgba(145, 94, 38, 0.75);
  -moz-box-shadow: 0px 0px 12px 4px rgba(145, 94, 38, 0.75);
}

.formdiv form .button-area {
  display: flex;
  justify-content: space-between;
}

.formdiv form button {
  background-color: #4caf50;
  border: none;
  color: white;
  padding: 0.8rem;
  float: right;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}
.formdiv form .button-area input,
.formdiv form .button-area button {
  background-color: #4caf50;
  border: none;
  color: white;
  padding: 0.8rem;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}

.formdiv form .button-area input:hover,
.formdiv form .button-area button:hover,
.formdiv button:hover {
  background-color: aquamarine;
  cursor: pointer;
}
.formdiv form .text {
  display: block;
  border: none;
  box-shadow: 0px 0px 2px 2px rgba(94, 91, 84, 0.75) inset;
  -webkit-box-shadow: 0px 0px 2px 2px rgba(94, 91, 84, 0.75) inset;
  -moz-box-shadow: 0px 0px 2px 2px rgba(94, 91, 84, 0.75) inset;

  border-radius: 5px;
  padding: 10px;
  width: 400px;
  margin: auto;
  margin-bottom: 30px;
}

.Availsize {
  margin: 10px 0 10px 0;
}

.Availsize input {
  margin-right: 2px;
  font-size: 4rem;
}

.formdiv form textarea {
  display: block;
  border: none;
  box-shadow: 0px 0px 2px 2px rgba(94, 91, 84, 0.75) inset;
  -webkit-box-shadow: 0px 0px 2px 2px rgba(94, 91, 84, 0.75) inset;
  -moz-box-shadow: 0px 0px 2px 2px rgba(94, 91, 84, 0.75) inset;

  border-radius: 5px;
  padding: 10px;
  width: 400px;
  margin: auto;
  margin-bottom: 30px;
}

@media (max-width: 580px) {
  .formdiv {
    height: 110vh;
    margin-bottom: 40px;
  }
  .formdiv form {
    /*  */
    padding: 10px 20px;
    padding-top: 35px;
    margin-top: 43px;
  }
  .formdiv form .text {
    width: 280px;
  }
}

